; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_secure.c_sec_establish_key.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_secure.c_sec_establish_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64, i32 }

@SEC_PADDING_SIZE = common dso_local global i64 0, align 8
@SEC_CLIENT_RANDOM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @sec_establish_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sec_establish_key(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @SEC_PADDING_SIZE, align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* @SEC_CLIENT_RANDOM, align 8
  store i64 %12, i64* %4, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %3, align 8
  %16 = add nsw i64 %15, 4
  %17 = call i32 @sec_init(%struct.TYPE_7__* %13, i64 %14, i64 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @out_uint32_le(i32 %18, i64 %19)
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @out_uint8p(i32 %21, i32 %25, i64 %29)
  %31 = load i32, i32* %5, align 4
  %32 = load i64, i64* @SEC_PADDING_SIZE, align 8
  %33 = call i32 @out_uint8s(i32 %31, i64 %32)
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @s_mark_end(i32 %34)
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %37 = load i32, i32* %5, align 4
  %38 = load i64, i64* %4, align 8
  %39 = call i32 @sec_send(%struct.TYPE_7__* %36, i32 %37, i64 %38)
  ret void
}

declare dso_local i32 @sec_init(%struct.TYPE_7__*, i64, i64) #1

declare dso_local i32 @out_uint32_le(i32, i64) #1

declare dso_local i32 @out_uint8p(i32, i32, i64) #1

declare dso_local i32 @out_uint8s(i32, i64) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @sec_send(%struct.TYPE_7__*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
